--- a/projects.html
+++ b/projects.html
@@ -103,35 +103,7 @@
                     </div> 
                 </div> 
 
-                <div class="project-card"> 
-                    <div class="project-image"> 
-                        <img src="DSCF4683.JPG" alt="Circuit Building"> 
-                    </div> 
-                    <div class="project-info"> 
-                        <h3>Electronics Workshop & Education</h3> 
-                        <p>Led hands-on workshops teaching circuit design fundamentals, PCB development, and embedded programming to aspiring engineers and students.</p> 
-                        <div class="project-tags"> 
-                            <span class="tag">Teaching</span> 
-                            <span class="tag">Electronics</span> 
-                            <span class="tag">Mentorship</span> 
-                        </div> 
-                    </div> 
-                </div> 
-
-                <div class="project-card"> 
-                    <div class="project-image"> 
-                        <img src="womenrobotics.png" alt="Women in Robotics"> 
-                    </div> 
-                    <div class="project-info"> 
-                        <h3>Women in Robotics Initiative</h3> 
-                        <p>Founded and organized community event to promote diversity in robotics and engineering fields. Created networking opportunities and technical workshops for underrepresented groups.</p> 
-                        <div class="project-tags"> 
-                            <span class="tag">Community Building</span> 
-                            <span class="tag">DEI</span> 
-                            <span class="tag">Leadership</span> 
-                        </div> 
-                    </div> 
-                </div> 
+            
 
             </div>
         </div>
@@ -142,7 +114,7 @@
         <div class="social-links">
             <a href="https://www.linkedin.com/in/hrishitaa-kurchania/" target="_blank">LinkedIn</a> • 
             <a href="https://github.com/HRISHITAA" target="_blank">GitHub</a> • 
-            <a href="mailto:hrishitaa8@gmail.com">Email</a>
+            <a href="mailto:hkurchania@gmail.com">Email</a>
         </div>
     </footer>
 
