--- a/review-paper-1.html
+++ b/review-paper-1.html
@@ -56,7 +56,7 @@
                 QGC allows operators to plan complex autonomous missions on a desktop and also provide visual data coming from the vehicle.
             </p>
 
-            <img src="Screenshot 2026-01-02 at 7.44.25 PM.png" alt="QGC MAVLink Connection Diagram">
+            <img src="High-level connection.png" alt="QGC MAVLink Connection Diagram">
             <p class="caption">Figure 1: High-level connection architecture between QGC and the Vehicle.</p>
 
             <h2>Technical Workflow: PX4 Integration</h2>
