--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -43,7 +43,7 @@
                 Engineer
             </h1>
             <p class="hero-subtitle">
-                Bridging the gap between <strong>digital intelligence</strong> and <strong>physical interaction</strong> through sensor fusion, soft robotics, and embedded systems.
+                Bridging the gap between <strong>complex algorithms</strong> and <strong>physical hardware</strong> to build robust, deployment-ready robots.
             </p>
 
             <div class="cta-buttons">
@@ -57,35 +57,43 @@
             <div class="marquee-track" id="marquee-track">
                 <span>ROS 2 Navigation</span>
                 <span>•</span>
-                <span>PCB Design (Altium)</span>
+                <span>PCB Design</span>
                 <span>•</span>
-                <span>Embedded C++</span>
+                <span>3D CAD Modeling</span>
                 <span>•</span>
-                <span>Tactile Sensors</span>
+                <span>Power Electronics</span>
                 <span>•</span>
-                <span>Sensor Fusion</span>
+                <span>ECAD</span>
                 <span>•</span>
                 <span>Computer Vision</span>
                 <span>•</span>
-                <span>Soft Robotics</span>
+                <span> MATLAB/Simulink</span>
                 <span>•</span>
-                <span>Control Theory</span>
+                <span>Python</span>
+                <span>•</span>
+                <span>FEA</span>
+                <span>•</span>
+                <span>Linux</span>
                 <span>•</span>
                 <span>ROS 2 Navigation</span>
                 <span>•</span>
-                <span>PCB Design (Altium)</span>
+                <span>PCB Design</span>
                 <span>•</span>
-                <span>Embedded C++</span>
+                <span>3D CAD Modeling</span>
                 <span>•</span>
-                <span>Tactile Sensors</span>
+                <span>Power Electronics</span>
                 <span>•</span>
-                <span>Sensor Fusion</span>
+                <span>ECAD</span>
                 <span>•</span>
                 <span>Computer Vision</span>
                 <span>•</span>
-                <span>Soft Robotics</span>
+                <span> MATLAB/Simulink</span>
                 <span>•</span>
-                <span>Control Theory</span>
+                <span>Python</span>
+                <span>•</span>
+                <span>FEA</span>
+                <span>•</span>
+                <span>Linux</span>
                 <span>•</span>
             </div>
         </div>
