--- a/review-paper-1.html
+++ b/review-paper-1.html
@@ -89,7 +89,7 @@ sudo apt install gstreamer1.0-plugins-bad gstreamer1.0-libav
                 <li><strong>Joystick:</strong> To enable joystick AND DISABLE THE RC MODE navigate to view > parameters > search: <code>COM_RC_IN_MODE</code></li>
             </ul>
 
-            <img src="Screenshot 2026-01-02 at 6.57.15 PM.jpg" alt="COM_RC_IN_MODE Parameter Setting">
+            <img src="COM_RC_IN_MODE.png" alt="COM_RC_IN_MODE Parameter Setting">
             <p class="caption">Figure 2: Configuring COM_RC_IN_MODE to enable MAVLink joystick control.</p>
 
             <h3>3. Flight Modes & Safety</h3>
