--- a/projects.html
+++ b/projects.html
@@ -226,13 +226,37 @@
     </style>
 </head>
 <body>
-    <nav>
-        <a href="Hrishitaa.html">Home</a>
-        <a href="projects.html" class="active">Projects</a>
-        <a href="writings.html">Writings</a>
-        <a href="about.html">About</a>
-    </nav>
+    <div class="side-panel">
+    
+    <a href="Hrishitaa.html" class="nav-item">
+        <svg class="nav-icon" viewBox="0 0 24 24">
+            <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
+        </svg>
+        <span class="nav-text">Home</span>
+    </a>
 
+    <a href="projects.html" class="nav-item active">
+        <svg class="nav-icon" viewBox="0 0 24 24">
+            <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"/>
+        </svg>
+        <span class="nav-text">Projects</span>
+    </a>
+
+    <a href="writings.html" class="nav-item">
+        <svg class="nav-icon" viewBox="0 0 24 24">
+            <path d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"/>
+        </svg>
+        <span class="nav-text">Writings</span>
+    </a>
+
+    <a href="about.html" class="nav-item">
+        <svg class="nav-icon" viewBox="0 0 24 24">
+            <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+        </svg>
+        <span class="nav-text">About</span>
+    </a>
+
+</div>
     <div class="header">
         <h1>Hardware & Robotics Projects</h1>
         <p>Specializing in tactile sensing, bio-inspired mechanisms, and robotic manipulation</p>
