--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -104,7 +104,7 @@
         <div class="social-links">
             <a href="https://www.linkedin.com/in/hrishitaa-kurchania/" target="_blank">LinkedIn</a> • 
             <a href="https://github.com/HRISHITAA" target="_blank">GitHub</a> • 
-            <a href="mailto:hrishitaa8@gmail.com">Email</a>
+            <a href="mailto:hkurchania@gmail.com">Email</a>
         </div>
     </footer>
 
