--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
         <div class="social-links" style="margin-top: 10px;">
             <a href="https://www.linkedin.com/in/hrishitaa-kurchania/" target="_blank" style="color:#b76ea3;">LinkedIn</a> • 
             <a href="https://github.com/HRISHITAA" target="_blank" style="color:#b76ea3;">GitHub</a> • 
-            <a href="mailto:hrishitaa8@gmail.com" style="color:#b76ea3;">Email</a>
+            <a href="mailto:hkurchania@gmail.com" style="color:#b76ea3;">Email</a>
         </div>
     </footer>
 
