--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -253,7 +253,7 @@
                 <a href="https://calendly.com/hrishitaa8/30min" class="btn secondary-btn">Schedule Meeting</a>
             </div>
         </div>
-
+        
         <div class="marquee-container">
             <div class="marquee-track" id="marquee-track">
                 <span>ROS 2 Navigation</span>
@@ -301,7 +301,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 Hrishitaa Kurchania • 
+        <p>&copy; 2026 Hrishitaa Kurchania. Crafted with code and curiosity.</p>
         <div class="social-links">
             <a href="https://www.linkedin.com/in/hrishitaa-kurchania/" target="_blank">LinkedIn</a> • 
             <a href="https://github.com/HRISHITAA" target="_blank">GitHub</a> • 
@@ -309,5 +309,6 @@
         </div>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 </html>
