--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -60,16 +60,48 @@
     </div>
 
     <div class="marquee-container">
-        <div class="marquee-track">
-            <span>ROS 2</span> <span>•</span> 
-            <span>Computer Vision</span> <span>•</span> 
-            <span>PCB Design</span> <span>•</span> 
-            <span>Embedded C++</span> <span>•</span> 
-            <span>Fusion 360</span> <span>•</span> 
-            <span>Control Theory</span> <span>•</span>
-            <span>ROS 2</span> <span>•</span> 
-            <span>Computer Vision</span> <span>•</span> 
-            <span>PCB Design</span>
+            <div class="marquee-track" id="marquee-track">
+                <span>ROS 2 Navigation</span>
+                <span>•</span>
+                <span>PCB Design</span>
+                <span>•</span>
+                <span>3D CAD Modeling</span>
+                <span>•</span>
+                <span>Power Electronics</span>
+                <span>•</span>
+                <span>ECAD</span>
+                <span>•</span>
+                <span>Computer Vision</span>
+                <span>•</span>
+                <span> MATLAB/Simulink</span>
+                <span>•</span>
+                <span>Python</span>
+                <span>•</span>
+                <span>FEA</span>
+                <span>•</span>
+                <span>Linux</span>
+                <span>•</span>
+                <span>ROS 2 Navigation</span>
+                <span>•</span>
+                <span>PCB Design</span>
+                <span>•</span>
+                <span>3D CAD Modeling</span>
+                <span>•</span>
+                <span>Power Electronics</span>
+                <span>•</span>
+                <span>ECAD</span>
+                <span>•</span>
+                <span>Computer Vision</span>
+                <span>•</span>
+                <span> MATLAB/Simulink</span>
+                <span>•</span>
+                <span>Python</span>
+                <span>•</span>
+                <span>FEA</span>
+                <span>•</span>
+                <span>Linux</span>
+                <span>•</span>
+            </div>
         </div>
     </div>
 
