--- a/projects.html
+++ b/projects.html
@@ -370,7 +370,7 @@
             </div>
         </a>
 
-        <a href="https://github.com/HRISHITAA/resistive-touch-detection" target="_blank" class="bubble-card">
+        <a href="resistive-touch-detection.html" target="_blank" class="bubble-card">
             <svg class="github-icon" viewBox="0 0 24 24" fill="currentColor">
                 <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
             </svg>
@@ -406,42 +406,7 @@
             </div>
         </a>
 
-        <a href="https://github.com/HRISHITAA/electronics-workshop" target="_blank" class="bubble-card">
-            <svg class="github-icon" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-            </svg>
-            <div class="card-image">
-                <img src="DSCF4683.JPG" alt="Workshop">
-            </div>
-            <div class="card-content">
-                <h3>Electronics Workshop & Education</h3>
-                <p>Led hands-on workshops teaching circuit design fundamentals, PCB development, and embedded programming to aspiring engineers and students.</p>
-                <div class="tags">
-                    <span class="tag">Teaching</span>
-                    <span class="tag">Electronics</span>
-                    <span class="tag">Mentorship</span>
-                </div>
-            </div>
-        </a>
-
-        <a href="https://github.com/HRISHITAA/women-in-robotics" target="_blank" class="bubble-card">
-            <svg class="github-icon" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-            </svg>
-            <div class="card-image">
-                <img src="womenrobotics.png" alt="Women in Robotics">
-            </div>
-            <div class="card-content">
-                <h3>Women in Robotics Initiative</h3>
-                <p>Founded and organized community event to promote diversity in robotics and engineering fields. Created networking opportunities and technical workshops.</p>
-                <div class="tags">
-                    <span class="tag">Community Building</span>
-                    <span class="tag">DEI</span>
-                    <span class="tag">Leadership</span>
-                </div>
-            </div>
-        </a>
-
+        
     </div>
 
     <footer>
