--- a/projects.html
+++ b/projects.html
@@ -4,95 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Hrishitaa Kurchania</title>
+    
+    <link rel="stylesheet" href="style.css">
+
     <style>
-        /* --- GLOBAL RESET --- */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+        /* --- PAGE SPECIFIC STYLES --- */
+        /* We keep these here because they are unique to the Bubble Cards */
 
+        /* Adjust padding for the specific layout of this page */
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background-color: #1b0618;
-            color: #e8d5e3;
-            line-height: 1.6;
-            /* Added padding-left to prevent content from hiding behind the side panel */
-            padding: 20px 20px 20px 100px; 
-        }
-
-        /* --- SIDE PANEL NAVIGATION (New) --- */
-        .side-panel {
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 100vh;
-            width: 80px;
-            background: rgba(27, 6, 24, 0.95);
-            border-right: 1px solid rgba(183, 110, 163, 0.3);
-            backdrop-filter: blur(10px);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            gap: 40px;
-            z-index: 1000;
-            box-shadow: 5px 0 20px rgba(0,0,0,0.2);
-        }
-
-        .nav-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-decoration: none;
-            color: #d4b5cc;
-            transition: all 0.3s ease;
-            opacity: 0.7;
-            position: relative;
-        }
-
-        .nav-icon {
-            width: 28px;
-            height: 28px;
-            margin-bottom: 5px;
-            fill: currentColor;
-            transition: transform 0.3s ease;
-        }
-
-        .nav-item:hover {
-            color: #b76ea3;
-            opacity: 1;
-            transform: translateY(-3px);
-        }
-
-        .nav-item:hover .nav-icon {
-            transform: scale(1.1);
-            filter: drop-shadow(0 0 8px rgba(183, 110, 163, 0.6));
-        }
-
-        /* Active State */
-        .nav-item.active {
-            color: #b76ea3;
-            opacity: 1;
-            font-weight: bold;
-        }
-
-        .nav-item.active::after {
-            content: '';
-            position: absolute;
-            left: -28px;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 4px;
-            height: 30px;
-            background: #b76ea3;
-            border-radius: 0 4px 4px 0;
-            box-shadow: 0 0 10px rgba(183, 110, 163, 0.6);
-        }
-
-        .nav-text {
-            font-size: 0.75rem;
-            letter-spacing: 0.5px;
+            padding-right: 20px;
         }
 
         /* --- HEADER --- */
@@ -100,7 +21,7 @@
             max-width: 1400px;
             margin: 0 auto 60px;
             text-align: center;
-            padding-top: 40px; /* Added space since top nav is gone */
+            padding-top: 40px;
         }
 
         .header h1 {
@@ -123,9 +44,11 @@
             grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
             gap: 40px;
             padding: 20px;
+            /* Push over to not hide behind sidebar */
+            margin-left: 80px; 
         }
 
-        /* --- BUBBLE CARDS --- */
+        /* --- BUBBLE CARDS (Unique to this page) --- */
         .bubble-card {
             position: relative;
             background: linear-gradient(135deg, rgba(139, 69, 123, 0.15) 0%, rgba(183, 110, 163, 0.08) 100%);
@@ -152,9 +75,7 @@
             transition: opacity 0.4s ease;
         }
 
-        .bubble-card:hover::before {
-            opacity: 1;
-        }
+        .bubble-card:hover::before { opacity: 1; }
 
         .bubble-card:hover {
             transform: translateY(-10px) scale(1.02);
@@ -180,9 +101,7 @@
             transition: transform 0.4s ease;
         }
 
-        .bubble-card:hover .card-image img {
-            transform: scale(1.1);
-        }
+        .bubble-card:hover .card-image img { transform: scale(1.1); }
 
         /* Card Content */
         .card-content h3 {
@@ -192,9 +111,7 @@
             transition: color 0.3s ease;
         }
 
-        .bubble-card:hover .card-content h3 {
-            color: #b76ea3;
-        }
+        .bubble-card:hover .card-content h3 { color: #b76ea3; }
 
         .card-content p {
             color: #d4b5cc;
@@ -241,88 +158,37 @@
             transform: scale(1.2) rotate(360deg);
         }
 
-        /* Footer */
-        footer {
-            max-width: 1400px;
-            margin: 80px auto 40px;
-            text-align: center;
-            color: #8b6982;
-            padding: 30px 20px;
-            border-top: 1px solid rgba(232, 213, 227, 0.1);
-        }
-
-        footer a {
-            color: #b76ea3;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        footer a:hover {
-            color: #d4b5cc;
-        }
-
-        /* --- RESPONSIVE DESIGN --- */
+        /* Mobile adjustments */
         @media (max-width: 768px) {
-            /* Move Sidebar to Bottom Bar on Mobile */
-            .side-panel {
-                top: auto;
-                bottom: 0;
-                width: 100%;
-                height: 70px;
-                flex-direction: row;
-                border-right: none;
-                border-top: 1px solid rgba(183, 110, 163, 0.3);
-                padding-bottom: 10px; /* Safe area for swipe bar */
-            }
-
-            .nav-item.active::after {
-                display: none; /* Remove side indicator on mobile */
-            }
-
-            /* Adjust body padding for bottom bar */
-            body {
-                padding: 20px 20px 90px 20px; 
-            }
-
-            .header h1 {
-                font-size: 2rem;
-            }
-
             .projects-container {
+                margin-left: 0;
                 grid-template-columns: 1fr;
-                gap: 30px;
             }
+            .header h1 { font-size: 2rem; }
+            body { padding-bottom: 100px; }
         }
     </style>
 </head>
 <body>
 
-    <div class="side-panel">
+    <div class="sticky-nav" id="stickyNav">
         <a href="Hrishitaa.html" class="nav-item">
-            <svg class="nav-icon" viewBox="0 0 24 24">
-                <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
-            </svg>
+            <svg class="nav-icon" viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
             <span class="nav-text">Home</span>
         </a>
 
         <a href="projects.html" class="nav-item active">
-            <svg class="nav-icon" viewBox="0 0 24 24">
-                <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"/>
-            </svg>
+            <svg class="nav-icon" viewBox="0 0 24 24"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"/></svg>
             <span class="nav-text">Projects</span>
         </a>
 
         <a href="writings.html" class="nav-item">
-            <svg class="nav-icon" viewBox="0 0 24 24">
-                <path d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"/>
-            </svg>
+            <svg class="nav-icon" viewBox="0 0 24 24"><path d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"/></svg>
             <span class="nav-text">Writings</span>
         </a>
 
         <a href="about.html" class="nav-item">
-            <svg class="nav-icon" viewBox="0 0 24 24">
-                <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
-            </svg>
+            <svg class="nav-icon" viewBox="0 0 24 24"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
             <span class="nav-text">About</span>
         </a>
     </div>
@@ -406,16 +272,18 @@
             </div>
         </a>
 
-        
     </div>
 
     <footer>
         <p>© 2026 Hrishitaa Kurchania. Crafted with code and curiosity.</p>
-        <p style="margin-top: 10px;">
-            <a href="https://www.linkedin.com/in/hrishitaa-kurchania/">LinkedIn</a> •
-            <a href="https://github.com/HRISHITAA">GitHub</a> •
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/hrishitaa-kurchania/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/HRISHITAA" target="_blank">GitHub</a>
             <a href="mailto:hkurchania@gmail.com">Email</a>
-        </p>
+        </div>
     </footer>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
