--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <div class="header">
-        <span class="brand-name">Hrishitaa Kurchania</span> 
-        
-        <h1>Hardware & Robotics Projects</h1>
-        <p>Specializing in tactile sensing, bio-inspired mechanisms, and robotic manipulation</p>
-    </div>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hrishitaa Kurchania - Hardware Robotics Engineer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -43,6 +41,7 @@
     </div>
 
     <div class="hero">
+        <span class="brand-name">Hrishitaa Kurchania</span>
         <div class="hero-content">
             <h1 class="hero-title">
                 Hardware<br>
